...
  // 회원가입 성공시 사용자에게 회원가입 완료를 알리는 다이얼로그
  void _showSuccessDialog() {
    // 확인 버튼을 누르면 다이얼로그와 회원가입 페이지를 모두 닫고 이전 화면으로 돌아감(로그인 화면)
    showDialog(
      context: context,
      builder: (context) => AlertDialog(
        title: const Text('가입 완료'),
        content: const Text('요청이 처리되었습니다. 가입된 계정이면 로그인해 주세요.'),
        actions: [
          TextButton(
            onPressed: () {
              Navigator.pop(context);
              Navigator.pop(context);
...
                            backgroundColor: const Color(0xFF81C784),
                            shape: RoundedRectangleBorder(
                              borderRadius: BorderRadius.circular(12),
                            ),
                          ),
                          child: const Text(
                            '가입하기',
                            style: TextStyle(
                              fontSize: 18,
                              fontWeight: FontWeight.bold,
                              color: Colors.white,
                            ),
                          ),
...
